Sections sweeper added
It has been added the section sweeper. Since the three sweeps have been added, the program is ready to solve sudokus although the scenario is not automated yet and the whole aesthetics work is still left.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,57 @@
 .suggest {
     background-color: rgb(255, 172, 142);
 }
+
+/*
+#input-0,
+#input-1,
+#input-2,
+#input-6,
+#input-7,
+#input-8,
+#input-9,
+#input-10,
+#input-11,
+#input-15,
+#input-16,
+#input-17,
+#input-18,
+#input-19,
+#input-20,
+#input-24,
+#input-25,
+#input-26,
+#input-30,
+#input-31,
+#input-32,
+#input-39,
+#input-40,
+#input-41,
+#input-48,
+#input-49,
+#input-50,
+#input-54,
+#input-55,
+#input-56,
+
+#input-60,
+#input-61,
+#input-62,
+
+#input-63,
+#input-64,
+#input-65,
+
+#input-69,
+#input-70,
+#input-71,
+
+#input-72,
+#input-73,
+#input-74,
+
+#input-78,
+#input-79,
+#input-80 {
+    background-color: rgb(255, 172, 142);
+}
