--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-input, button {
+input,
+button {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    cursor: pointer;   
-}   
+    cursor: pointer;
+}
