--- a/style.css
+++ b/style.css
@@ -3,3 +3,6 @@ button {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     cursor: pointer;
 }
+html{
+    height: 100vh;
+}
